[gd_scene load_steps=7 format=3 uid="uid://d3hm7di5du4m"]

[ext_resource type="Theme" uid="uid://ss5o0ot61xc0" path="res://themes/title_screen.tres" id="1_8lq8x"]
[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_t2frn"]
[ext_resource type="Texture2D" uid="uid://t8h74uusbxr7" path="res://Sprites/UI/button_container_vertical.png" id="2_v720i"]

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_ati3p"]

[sub_resource type="InputEventJoypadMotion" id="InputEventJoypadMotion_pqx4n"]
axis = 5
axis_value = 1.0

[sub_resource type="Shortcut" id="Shortcut_08dd8"]
events = [SubResource("InputEventJoypadButton_ati3p"), SubResource("InputEventJoypadMotion_pqx4n")]

[node name="Pause Menu" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1_t2frn")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="button_margin" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 250

[node name="TextureRect" type="TextureRect" parent="button_margin"]
layout_mode = 2
theme = ExtResource("1_8lq8x")
texture = ExtResource("2_v720i")
stretch_mode = 5

[node name="HBoxContainer" type="VBoxContainer" parent="button_margin/TextureRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -113.5
offset_right = 113.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_constants/separation = 40
alignment = 1

[node name="continue" type="Button" parent="button_margin/TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(227, 62)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_8lq8x")
text = "Continue"

[node name="options" type="Button" parent="button_margin/TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(227, 62)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_8lq8x")
text = "Options"

[node name="Titelscreen" type="Button" parent="button_margin/TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(227, 62)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_8lq8x")
shortcut = SubResource("Shortcut_08dd8")
text = "Titelscreen"

[node name="Exit" type="Button" parent="button_margin/TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(227, 62)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_8lq8x")
text = "Exit
"

[connection signal="pressed" from="button_margin/TextureRect/HBoxContainer/continue" to="." method="continue_pressed"]
[connection signal="pressed" from="button_margin/TextureRect/HBoxContainer/options" to="." method="options_pressed"]
[connection signal="pressed" from="button_margin/TextureRect/HBoxContainer/Titelscreen" to="." method="titelscreen_pressed"]
[connection signal="pressed" from="button_margin/TextureRect/HBoxContainer/Exit" to="." method="exit_the_game"]
